[gd_scene load_steps=19 format=2]

[ext_resource path="res://Enemies/BossIdle.png" type="Texture" id=1]
[ext_resource path="res://UI/GameOverTrans.tscn" type="PackedScene" id=2]
[ext_resource path="res://Shadows/LargeShadow.png" type="Texture" id=3]
[ext_resource path="res://Enemies/BossAttackTell.png" type="Texture" id=4]
[ext_resource path="res://Enemies/BossAttack.png" type="Texture" id=5]
[ext_resource path="res://HitBoxes and HurtBoxes/HitBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://HitBoxes and HurtBoxes/HurtBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/Talus.gd" type="Script" id=8]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=9]
[ext_resource path="res://Music and Sounds/BossDanger.wav" type="AudioStream" id=10]
[ext_resource path="res://Music and Sounds/BossAttack.wav" type="AudioStream" id=11]
[ext_resource path="res://Music and Sounds/BossStart.wav" type="AudioStream" id=12]
[ext_resource path="res://Music and Sounds/BossMidHealth.wav" type="AudioStream" id=13]

[sub_resource type="Animation" id=1]
resource_name = "Attack"
length = 7.2
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackTell:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackTell:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 3, 4 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Attack:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Attack:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5, 5.1, 5.2, 5.3, 5.4, 5.5, 5.6, 5.7, 5.8, 5.9, 6, 6.1, 6.2, 6.3, 6.4, 6.5, 6.6, 6.7, 6.8, 6.9, 7, 7.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 3, 4, 5, 6, 7, 8, 5, 6, 7, 8, 3, 4, 5, 6, 7, 3, 4, 5, 6, 7, 8, 3, 4, 5, 6, 7, 8, 3, 4, 5, 6, 7, 8, 9, 4, 5, 6, 7, 3, 4, 5, 6, 7, 3, 4, 5, 6, 7, 3, 4, 5, 6, 9, 10, 12, 13 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.9, 1.3, 1.6, 2, 2.2, 2.3, 2.6, 2.9, 3.1, 3.4, 3.7, 4, 4.3, 4.6, 5, 5.2, 5.4, 5.7, 5.9, 6.2, 6.4, 6.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true, false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("HitBox/CollisionShape2D:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.9, 1, 1.1, 1.2, 1.6, 1.7, 1.8, 1.9, 2.2, 2.6, 2.7, 2.8, 3.1, 3.2, 3.3, 3.7, 3.8, 3.9, 4.3, 4.4, 4.5, 5, 5.1, 5.4, 5.5, 5.6, 5.9, 6, 6.1, 6.4, 6.5, 6.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 30.7244, -20.3947 ), Vector2( -1.13639, 39.1641 ), Vector2( -35.8663, 29.3553 ), Vector2( 30.7244, -20.3947 ), Vector2( -1.13639, 39.1641 ), Vector2( -35.8663, 29.3553 ), Vector2( -44.1364, 9.16403 ), Vector2( 30.7244, -20.3947 ), Vector2( -44.2756, 12.6053 ), Vector2( 2.7244, 41.6053 ), Vector2( -31.2756, 32.6053 ), Vector2( -43.2756, 8.6053 ), Vector2( -0.275597, 37.6053 ), Vector2( -31.2756, 30.6053 ), Vector2( -44.2756, 13.6053 ), Vector2( 0.724403, 41.6053 ), Vector2( -32.2756, 28.6053 ), Vector2( -44.2756, 10.6053 ), Vector2( -0.275597, 39.6053 ), Vector2( -33.2756, 33.6053 ), Vector2( -44.2756, 11.6053 ), Vector2( -31.2756, 32.6053 ), Vector2( -44.2756, 10.6053 ), Vector2( 0.724407, 39.6053 ), Vector2( -32.2756, 33.6053 ), Vector2( -46.2756, 11.6053 ), Vector2( 0.724403, 41.6053 ), Vector2( -35.2756, 32.6053 ), Vector2( -41.2756, 9.6053 ), Vector2( -1.2756, 41.6053 ), Vector2( -35.2756, 29.6053 ), Vector2( -44.2756, 11.6053 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("HitBox/CollisionShape2D:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.9, 1, 1.1, 1.2, 1.6, 1.7, 1.8, 1.9, 2.2, 2.6, 2.7, 2.8, 3.1, 3.2, 3.3, 3.7, 3.8, 3.9, 4.3, 4.4, 4.5, 5, 5.1, 5.4, 5.5, 5.6, 5.9, 6, 6.1, 6.4, 6.5, 6.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -28.1, -9.4, -29.1, -159.9, -197.3, -197.3, -197.3, -197.3, -206.7, -206.7, -206.7, -197.3, -197.3, -216.0, -206.6, -206.6, -206.6, -206.6, -206.6, -206.6, -206.6, -206.6, -206.6, -206.6, -206.6, -206.6, -206.6, -206.6, -206.6, -206.6, -206.6, -206.6 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("HurtBox:space_override")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("BossAttack:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Idle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackTell:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Attack:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HurtBox:space_override")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 10.4772
height = 30.736

[sub_resource type="CapsuleShape2D" id=4]
radius = 23.5188
height = 21.827

[sub_resource type="CapsuleShape2D" id=5]
radius = 7.73608
height = 29.2694

[node name="Talus" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 8 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 14 )
scale = Vector2( 1.45652, 1 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Attack = SubResource( 1 )
anims/Idle = SubResource( 2 )

[node name="Idle" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -8 )
texture = ExtResource( 1 )
hframes = 9

[node name="AttackTell" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
offset = Vector2( 0, -8 )
hframes = 5
frame = 4

[node name="Attack" type="Sprite" parent="."]
texture = ExtResource( 5 )
offset = Vector2( 0, 1 )
hframes = 14
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6.682 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 9 )]
max_health = 6

[node name="HurtBox" parent="." instance=ExtResource( 7 )]
position = Vector2( 0.44545, -7.12719 )
collision_layer = 24

[node name="CollisionShape2D" parent="HurtBox" index="0"]
rotation = 1.5708
shape = SubResource( 4 )

[node name="HitBox" parent="." instance=ExtResource( 6 )]
collision_mask = 4

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 22.7592, -5.50499 )
rotation = -2.95397
shape = SubResource( 5 )
disabled = true

[node name="BossAttack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="BossDanger" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="BossMid" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="BossStart" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="CanvasLayer" parent="." instance=ExtResource( 2 )]
[connection signal="mid_health" from="Stats" to="." method="_on_Stats_mid_health"]
[connection signal="no_health" from="Stats" to="CanvasLayer" method="_on_Stats_no_health"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="finished" from="BossAttack" to="." method="_on_BossAttack_finished"]
[connection signal="finished" from="BossDanger" to="." method="_on_BossDanger_finished"]
[connection signal="finished" from="BossMid" to="." method="_on_BossMid_finished"]
[connection signal="finished" from="BossStart" to="." method="_on_BossStart_finished"]

[editable path="HurtBox"]

[editable path="HitBox"]
